remove vertical padding of search button to fix alignment with search box

--- a/qa-styles.less
+++ b/qa-styles.less
@@ -574,7 +574,7 @@ h2 {
 .qa-search-button {
   background-color: @basecolor;
   border: @bordernormal;
-  padding: 1px 5px;
+  padding: 0 5px;
 }
 
 /* Main, sub and category navigation */
